Update index.html with complete one-page website manual

--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Floorplanner App Manual</title>\n    <link rel="stylesheet" href="styles.css">\n</head>\n<body>\n    <header>\n        <h1>Floorplanner App Manual</h1>\n    </header>\n    <main>\n        <section id="introduction">\n            <h2>Introduction</h2>\n            <p>The Floorplanner app is a powerful tool designed for creating floor plans for homes and offices easily and efficiently.</p>\n        </section>\n        <section id="features">\n            <h2>Features</h2>\n            <ul>\n                <li>User-friendly interface</li>\n                <li>Customizable templates</li>\n                <li>3D visualization</li>\n                <li>Collaboration tools</li>\n            </ul>\n        </section>\n        <section id="how-to-use">\n            <h2>How to Use</h2>\n            <ol>\n                <li>Sign up or log in to your account.</li>\n                <li>Select a template or start from scratch.</li>\n                <li>Use the drag-and-drop tools to create your floor plan.</li>\n                <li>Add furniture and decor items from the library.</li>\n                <li>Save and share your design.</li>\n            </ol>\n        </section>\n    </main>\n    <footer>\n        <h2>Conclusion</h2>\n        <p>The Floorplanner app simplifies the process of building and sharing floor plans, making it an indispensable tool for designers and homeowners alike.</p>\n    </footer>\n</body>\n</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>One-Page Website Manual</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 0; padding: 0; }
+        header { background: #4CAF50; color: white; padding: 10px 0; text-align: center; }
+        nav { margin: 20px; }
+        nav a { margin: 0 15px; text-decoration: none; color: #4CAF50; }
+        section { padding: 20px; }
+        footer { text-align: center; padding: 10px 0; background: #4CAF50; color: white; }
+        @media (max-width: 600px) {
+            nav { display: flex; flex-direction: column; align-items: center; }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>One-Page Website Manual</h1>
+        <nav>
+            <a href="#section1">Home</a>
+            <a href="#section2">About</a>
+            <a href="#section3">Services</a>
+            <a href="#section4">FAQ</a>
+        </nav>
+    </header>
+    <section id="section1">
+        <h2>Welcome to Our One-Page Website</h2>
+        <p>This is a simple demonstration of a one-page website structure.</p>
+    </section>
+    <section id="section2">
+        <h2>About Us</h2>
+        <p>We are dedicated to providing the best service possible.</p>
+    </section>
+    <section id="section3">
+        <h2>Our Services</h2>
+        <p>We offer a variety of services including web design, development, and digital marketing.</p>
+    </section>
+    <section id="section4">
+        <h2>FAQ</h2>
+        <ul>
+            <li><strong>Question 1:</strong> What is the purpose of this website?</li>
+            <li><strong>Answer:</strong> To demonstrate a one-page website structure.</li>
+            <li><strong>Question 2:</strong> How can I contact you?</li>
+            <li><strong>Answer:</strong> Use the contact form on our homepage.</li>
+        </ul>
+    </section>
+    <footer>
+        <p>&copy; 2026 Your Company Name. All Rights Reserved.</p>
+    </footer>
+</body>
+</html>
